--- a/planets-js/css/planetsui.css
+++ b/planets-js/css/planetsui.css
@@ -13,6 +13,15 @@ body {
     position: fixed;
 }
 
+input[type="range"] {
+    -webkit-appearance: none !important;
+    height: 4px;
+    margin-top: 12px;
+    margin-bottom: 12px;
+    background-color: #444;
+    border-radius: 2px;
+}
+
 #popupBar {
     position: fixed;
     right: 0;
@@ -25,6 +34,7 @@ body {
     margin: 8px;
     padding: 2px;
     background-color: #ddd;
+    width: 240px;
 }
 
 #popupBar h1 {
@@ -32,6 +42,18 @@ body {
     font-size: 24px;
     margin: 4px;
     border-bottom: 2px solid black;
+}
+
+#popupBar div table {
+    width: 100%;
+}
+
+#popupBar div table tr th {
+    padding-left: 5px;
+    padding-right: 5px;
+    font-weight: normal;
+    text-align: left;
+    font-size: 14px;
 }
 
 .popupClose {
@@ -43,11 +65,6 @@ body {
     width: 100%;
 }
 
-#createPlanetPopup table tr th {
-    width: 40px;
-    padding-left: 5px;
-    padding-right: 5px;
-    font-weight: normal;
-    text-align: left;
-    font-size: 14px;
+#speedPopup table tr th {
+    width: 50%;
 }
