--- a/planets-js/css/planetsui.css
+++ b/planets-js/css/planetsui.css
@@ -15,11 +15,16 @@ body {
 
 input[type="range"] {
     -webkit-appearance: none !important;
-    height: 4px;
+    height: 6px;
     margin-top: 12px;
     margin-bottom: 12px;
-    background-color: #444;
     border-radius: 2px;
+
+    background: -moz-linear-gradient(top, #000 0%, #888 100%); /* FF3.6+ */
+    background: -webkit-linear-gradient(top, #000 0%, #888 100%); /* Chrome10+,Safari5.1+ */
+    background: -o-linear-gradient(top, #000 0%, #888 100%); /* Opera 11.10+ */
+    background: -ms-linear-gradient(top, #000 0%, #888 100%); /* IE10+ */
+    background: linear-gradient(to bottom, #000 0%, #888 100%); /* W3C */
 }
 
 #popupBar {
@@ -33,8 +38,15 @@ input[type="range"] {
     z-index: 20;
     margin: 8px;
     padding: 2px;
-    background-color: #ddd;
     width: 240px;
+    border: 1px solid black;
+    border-radius: 4px;
+
+    background: -moz-linear-gradient(top, #eee 0%, #ccc 100%); /* FF3.6+ */
+    background: -webkit-linear-gradient(top, #eee 0%, #ccc 100%); /* Chrome10+,Safari5.1+ */
+    background: -o-linear-gradient(top, #eee 0%, #ccc 100%); /* Opera 11.10+ */
+    background: -ms-linear-gradient(top, #eee 0%, #ccc 100%); /* IE10+ */
+    background: linear-gradient(to bottom, #eee 0%, #ccc 100%); /* W3C */
 }
 
 #popupBar h1 {
