--- a/planets-js/css/planetsui.css
+++ b/planets-js/css/planetsui.css
@@ -33,7 +33,6 @@ input[type="range"] {
 }
 
 #popupBar div {
-    display: none;
     z-index: 20;
     margin: 8px;
     padding: 2px;
@@ -53,6 +52,7 @@ input[type="range"] {
     font-size: 24px;
     margin: 4px;
     border-bottom: 2px solid black;
+    cursor: pointer;
 }
 
 #popupBar div table {
@@ -65,11 +65,6 @@ input[type="range"] {
     font-weight: normal;
     text-align: left;
     font-size: 14px;
-}
-
-.popupClose {
-    /* TODO - use an icon instead of text 'x'. */
-    float: right;
 }
 
 .tableInput {
