added colapse/expand button to popups.

--- a/planets-js/css/planetsui.css
+++ b/planets-js/css/planetsui.css
@@ -67,6 +67,11 @@ input[type="range"] {
     font-size: 14px;
 }
 
+.popupToggle {
+    width: 100%;
+    font-size: 8px;
+}
+
 .tableInput {
     width: 100%;
 }
