--- a/planets-js/css/planetsui.css
+++ b/planets-js/css/planetsui.css
@@ -73,6 +73,7 @@ input[type="range"] {
     font-weight: normal;
     text-align: left;
     font-size: 14px;
+    white-space: nowrap;
 }
 
 .popupToggle {
