--- a/planets-js/css/planetsui.css
+++ b/planets-js/css/planetsui.css
@@ -3,6 +3,51 @@ body {
     overflow: hidden;
 }
 
+#loading {
+    background: #111;
+    width: 100%;
+    height: 100%;
+    position: fixed;
+    z-index: 99;
+}
+
+.center {
+    position: absolute;
+    width: 160px;
+    height: 40px;
+    top: 50%;
+    left: 50%;
+    margin-left: -80px;
+    margin-top: -20px;
+    color: #ddd;
+    font-size: 32px;
+}
+
+.elipsis {
+    overflow: hidden;
+    display: inline-block;
+    vertical-align: bottom;
+    -webkit-animation: ellipsis 2s infinite;
+    -moz-animation: ellipsis 2s infinite;
+}
+
+@-webkit-keyframes ellipsis {
+    from {
+        width: 2px;
+    }
+    to {
+        width: 24px;
+    }
+}
+@-moz-keyframes ellipsis {
+    from {
+        width: 2px;
+    }
+    to {
+        width: 24px;
+    }
+}
+
 .hide {
     position: fixed;
     display: none;
