--- a/planets-js/css/planetsui.css
+++ b/planets-js/css/planetsui.css
@@ -60,8 +60,7 @@ body {
 input[type="range"] {
     -webkit-appearance: none !important;
     height: 6px;
-    margin-top: 12px;
-    margin-bottom: 12px;
+    margin: 8px 0px;
     border-radius: 2px;
 
     background: -moz-linear-gradient(top, #000 0%, #888 100%); /* FF3.6+ */
